# perf-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md  test.perf.data  test_simple  test_verify.perf.data
.sisyphus/: boulder.json
.sisyphus/evidence/: format-spec.md  multithread_test  multithread_test.rs  reference-empty.perf.data  reference-multithread.perf.data  reference-simple.perf.data  task-01-git-init.txt  task-01-gitignore.txt  task-02-compile.txt  task-03-error-derive.txt  task-04-cli-help.txt  task-04-subcommand-help.txt  task-05-arch-compile.txt  task-05-arch-modules.txt  task-06-privilege-run.txt  task-06-privilege-test.txt  task-07-counter-test.txt  task-07-perf-event-compile.txt  test-output.perf.data
.sisyphus/plans/: linux-perf-reader.md  perf-data-compatibility.md  perf-rs-implementation.md  system-level-profiling.md
examples/: 01-list-events.sh  02-stat-events.sh  03-record-samples.sh  04-analyze-report.sh  05-dump-trace.sh  06-complete-workflow.sh  README.md
scripts/: benchmark_dwarf.sh  workload.sh
src/: cli.rs  error.rs  events.rs  lib.rs  main.rs  pager.rs  tracepoint.rs
src/arch/: arm64.rs  mod.rs  riscv64.rs  x86_64.rs
tests/: debug_events.rs  integration_cli_test.rs  integration_dwarf_test.rs  integration_list_test.rs  integration_record_test.rs  integration_report_test.rs  integration_script_test.rs  integration_stat.rs  integration_stat_test.rs  integration_test.rs  pagination_test.rs  perf_compatibility.rs  perf_reader_unit_test.rs  perf_reader_validation_test.rs  perf_reader_validation_tests.rs  test_debug.rs  tracepoint_integration.rs
(+26 files in other folders)
